# eza-themer

./: CHANGELOGS.md  Cargo.toml  README.md
src/: config.rs  main.rs  theme_name.rs  utils.rs
